lab1/Test/L1-A-13-68.output
Error Type B at Line 2
Error Type B at Line 7
Error Type B at Line 17
Error Type A at Line 18
Error Type B at Line 22
Error Type B at Line 25
Error Type B at Line 27
