lab1/Test/L1-A-13-68.cmm
struct {
}NtLTrBTnP ( {
  float v ;
  while ( Xa0a6naXYTZprPqRx )   return ul1YrwDI5zVkRoy0e0 
    = WYHEF > g + CcFoiC0teJyUPXfbTdJz / ! VxqQPRruuttbocO 
    ( JUPiShaEXC7KIVD4tm || n1qn9Vr && BfxLOR == MjuSoayg9vyixO 
    [ DS3b7ujeqocze1yA != - ( ( <= mxafflDNnBClOaybm7ey 
    / ( ow6L2 - ( NKBmcZMbWuXY02nv = vTS49Y7 ( FLZ , b_T6 
    ) * - dVqjj ) - ! - wo ) ) * BSX5qvILjZqvrzKfEGt >= 
    BGjy3hiTmLHVwaTAYgr4 / ! JX1hF0LWF8 . ubhBW ) - ehRS 
    < 725851301 . CqauvtvOZhy . pE1l1KJOcMaJIN7CqK - y9m 
    ( ) ] * - - 1242929485.1293139946 ) ;

}
int ;
int 
int ;
int %bBLhZt2WCCYQY6C [ 951860045 ] 
;
struct h dhhtfyFaHndkXN 
;
struct sn2Y6EPsibJyeTKXn && ;
int W5t , MnMOFp92hoNWo 

else ;
struct ft_wNbQ2_J ;
int oRhXkY2iOnOVEcaMZl ( int SJVna6 ) struct Tzsk 
  V_in8DXP5k9zv , tzxKwmaDc2bhfEg0TQP = kepF9YpMZk78BmR12T 
  ;
if ( YOso ) while ( m2kAqV_hLsqx1vf ) if ( fLW5cp 
  ) {
}else f8k0VFhTqw6Vd ;


else if ( WKvjpoapQdEc9i ) if ( oABL ) if ( cH ) _23 
  ;
else {
}



}
int ;
int ;
int ;
int ;
int ;
int xh9CjEFKJEeQBkgi2egb ( int g8gBSS78lQLkFjsn , 
  int YInEmKYO21KmlsA ) {
}
struct fScUsYR {
}iLQucyGzkiRMREgfPjOy ( ) {
}
